--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "keplr-example",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://AntonAdenll.github.io/USDC-deposits",
   "dependencies": {
     "@archwayhq/arch3.js": "^0.5.0",
     "@cosmjs/ledger-amino": "^0.32.1",
