--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "keplr-example",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AntonAndell.github.io/USDC-deposits",
   "dependencies": {
     "@archwayhq/arch3.js": "^0.5.0",
     "@cosmjs/ledger-amino": "^0.32.1",
@@ -24,9 +23,7 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
-    "proto-build": "zx ./src/proto-types-gen/scripts/proto-gen.mjs",
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
+    "proto-build": "zx ./src/proto-types-gen/scripts/proto-gen.mjs"
   },
   "eslintConfig": {
     "extends": [
